random message for seas challenge

--- a/data/halloween-basics/advancements/svly/seas_challenge.json
+++ b/data/halloween-basics/advancements/svly/seas_challenge.json
@@ -1,7 +1,7 @@
 {
     "display": {
         "title": {
-            "text": "Free Runner",
+            "text": "Getting Over It",
             "color": "gold"
         },
         "description": {
